# Rig.Sys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mayapy.bat  pyproject.toml  pytest.bat
.github/workflows/: main.yml
example/: create_sphere.py  cube.fbx  cube.mb  cube_export.fbx  exampleCharacter.py  exampleCharacter_proxies.json
rigsys/: __init__.py
rigsys/api/: __init__.py  api_character.py  api_rig.py
rigsys/lib/: __init__.py  ctrl.py  joint.py  nurbs.py  proxy.py  skinning.py
rigsys/modules/: __init__.py  moduleBase.py
rigsys/modules/deformer/: __init__.py  deformerBase.py  skinClusterImportExport.py
rigsys/modules/export/: __init__.py  exportBase.py  fbxExport.py  mbExport.py
rigsys/modules/motion/: FK.py  FKRail.py  FKSegment.py  IK.py  Root.py  __init__.py  floating.py  hand.py  limb.py  lips.py  motionBase.py  quadLimb  quadLimb.py  ribbonBindIK.py  testMotionModule.py
rigsys/modules/utility/: __init__.py  bindJoints.py  controlShapeOverride.py  curveColor.py  importModel.py  motionModuleParenting.py  runPythonCode.py  spaceSwitch.py  utilityBase.py  visibilityAttributeOverride.py
rigsys/test/: __init__.py  conftest.py  testRunner.py  test_rig.py
rigsys/ui/: __init__.py  add_module_dialog.py  rigsys_ui.py
rigsys/utils/: __init__.py  listUtils.py  stringUtils.py  unload.py
test/: test_character.py  test_rig.py
wiki/: deformer-modules.md  export-modules.md  getting-started.md  installation.md  module-authoring.md  motion-modules.md  overview.md  plugs-and-sockets.md  utility-modules.md  working-with-proxies.md
(+17 files in other folders)
